correction professiongui